# hotcrp2pdf

./: LICENSE  README.md  flake.nix  pyproject.toml
hotcrp2pdf/: __init__.py  __main__.py  converter.py  main.py  models.py
test/: example_submissions.json
